# PMSAuto

./: .gitignore  .pre-commit-config.yaml  README.md  auto_strm.sh  autorclone.py  emby.py  fs_operation.py  log.py  media_handle.py  media_handle_nsfw.py  mv_folders.py  mv_nsfw_folder.py  plex.py  pyproject.toml  qb_rclone_auto_upload.py  rclone.py  rclone_sa_magic.py  requirements.txt  scheduler.py  settings.py.tpl  settings.tpl.py  ssh_client.py  strm.py  tmdb.py  utils.py
src/: autorclone.py  fs_operation.py  http_session.py  log.py  media_handle.py  media_handle_nsfw.py  mv_folders.py  qb_rclone_auto_upload.py  scheduler.py  settings.tpl.py  ssh_client.py  strm.py  tmdb.py  utils.py
src/auto_strm/: __init__.py  auto_strm.py  file_collector.py  file_processor.py  plex_scanner.py
src/mediaserver/: __init__.py  emby.py  plex.py
